--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,14 @@
  Needed only if your app makes the device discoverable to Bluetooth
          devices.
     -->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+    <!--    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />-->
     <!--
  Needed only if your app communicates with already-paired Bluetooth
          devices.
     -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
