--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.le.potato">
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -40,13 +40,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <service android:name="com.example.myapplication.BLEService" />
+        <service android:name="com.le.potato.BLEService" />
         <activity
-            android:name=".BluetoothStatusActivity"
+            android:name="com.le.potato.BluetoothStatusActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="com.le.potato.MainActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.le.potato.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
