--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <service android:name="com.le.potato.BLEService" />
+        <service android:name="com.le.potato.transport.BluetoothFacadeService" />
         <activity
             android:name="com.le.potato.BluetoothStatusActivity"
             android:exported="false"
